<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gigaspaces.vaultforandroid.Secret">

    <TextView
        android:id="@+id/leaseId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding"
        android:text="@string/lease_id" />

    <TextView
        android:id="@+id/leaseIdValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaseId"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding" />

    <TextView
        android:id="@+id/renewable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaseIdValue"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding"
        android:text="@string/renewable" />

    <TextView
        android:id="@+id/renewableValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/renewable"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding" />

    <TextView
        android:id="@+id/leaseDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/renewableValue"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding"
        android:text="@string/lease_duration" />

    <TextView
        android:id="@+id/leaseDurationValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaseDuration"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding" />

    <TextView
        android:id="@+id/dataListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaseDurationValue"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding"
        android:text="@string/secret_data_title" />

    <ListView
        android:id="@+id/dataListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataListTitle"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding" />

    <TextView
        android:id="@+id/warnings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataListView"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding"
        android:text="@string/warnings" />

    <TextView
        android:id="@+id/warningsValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warnings"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding" />

    <TextView
        android:id="@+id/auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warningsValue"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding"
        android:text="@string/auth" />

    <TextView
        android:id="@+id/authValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auth"
        android:paddingBottom="@dimen/secret_info_field_bottom_padding" />

</RelativeLayout>
